[package]
name = "ja-colloquial"
version = "0.1.0"
edition = "2024"

authors = ["metastable-void"]
description = "Japanese Colloquial Christian Bible library."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/ja-colloquial-rs"
homepage = "https://github.com/metastable-void/ja-colloquial-rs"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
